assets/css/style.css
body {
  background-color: rgb(238, 238, 238);
}

.hero-image {
  background-image: url('../img/heikki.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: -300px;
}

@media (max-width: 992px) {
  .hero-image {
    height: 350px;
    background-image: url('../img/heikki.jpg');
    background-position: center;
    background-size: cover;
  }
}

.whitespace {
  margin: 150px 0 50px 0;
}

.hero-title {
  margin: 2rem 0 0 0;
  text-align: center;
}

.margin {
  margin: 2rem 0;
}

.card {
  height: 100%;
}

.link:hover {
  font-size: 2rem;
}

.cta-button {
  font-size: 1.5rem;
  padding: 1rem 2rem;
}

.cta-button .fa-github {
  font-size: 2rem;
}

ul li {
  list-style-type: "- ";
}

.skill-card {
  background-color: #506684;
  color: white;
}

.skill-tag {
  display: inline-block;
  text-align: center;
  background-color: #3b82e6;
  padding: 0.5rem 1.3rem;
  border-radius: 2rem;
  margin: 0.3rem 0;
}

